[MN-672][FIX]Retours relevé périodique : visibilité liste élève

--- a/src/main/resources/public/sass/global/specifics/_competences.scss
+++ b/src/main/resources/public/sass/global/specifics/_competences.scss
@@ -900,8 +900,12 @@ body.evaluations {
       }
     }
     &.openedAppreciation{
-      height: auto;
+      height: 300px;
     }
+  }
+
+  .appreciationTextarea{
+    height: 220px;
   }
 
   .criteres, .statistiques-devoir, .detail-devoir, .student-info, .devoir-info, .notes-help {
